# InsaneHARFS

./: CMakeLists.txt  InsaneHARFS.cbp  README.md  main.cpp
Code/: main.cpp
Code/DataStructures/: proof.cpp  proof.h
Code/models/: FileManager.cpp  FileManager.h  Pointer.h
Data/: DoubleList.h
config/: Configuration.h
documentation/: jsonSchema.jsonSchema
documentation/logs/pablo/: bitacora.txt  referencias.txt
libs/practicalsocket/: PracticalSocket.cpp  PracticalSocket.h
libs/rapidxml/: rapidxml_utils.hpp
models/: FileManager.cpp  FileManager.h  Pointer.h
models/pointer/: MemoryPointer.h  MemoryPointer.tpp  Pointer.h
res/: client_config.cfg  controller_config.cfg  disk_config.cfg  headers.cfg
sourceCode/: pathConstants.cpp  pathConstants.h
sourceCode/client/: harfs-client-main.cpp
sourceCode/client/config/: clientConfiguration.cpp  clientConfiguration.h
sourceCode/client/network/: JsonWriter.cpp  JsonWriter.h  TCPClient.cpp  TCPClient.h
sourceCode/client/user_interface/: command-line.cpp  command-line.h
sourceCode/config/: Configuration.cpp  Configuration.h  controllerConfiguration.cpp  controllerConfiguration.h  diskConfiguration.cpp  diskConfiguration.h
sourceCode/controller/: harfs-controller-main.cpp
sourceCode/controller/Network/: TCPServer.h
sourceCode/controller/config/: controllerConfiguration.cpp  controllerConfiguration.h
sourceCode/controller/models/: Bridge.cpp  Bridge.h
sourceCode/controller/network/: JsonWriter.cpp  JsonWriter.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  ipPort.cpp  ipPort.h
sourceCode/dataStructures/: BNode.h  BRecord.cpp  BTree.h  BinaryTree.h  DoubleLinkedList.h  DoubleLinkedNode.h
sourceCode/dataStructuresOnHD/: List.cpp  List.h
sourceCode/disk/: Exceptions.h  harfs-disk-main.cpp  pathConstants.cpp  pathConstants.h
sourceCode/disk/config/: diskConfiguration.h
sourceCode/disk/dataStructures/: BNode.cpp  BRecord.h  BTree.cpp  DoubleLinkedNode.h
sourceCode/disk/dataStructuresOnHD/: BTree.cpp  BTree.h  Buffer.cpp  Buffer.h  List.cpp  List.h
sourceCode/disk/managers/: BlockManager.cpp  BlockManager.h  FileManager.cpp  FileManager.h  NetworkUtils.cpp  NetworkUtils.h  RegisterManager.cpp  RegisterManager.h  StorageBlockManager.cpp  StorageBlockManager.h
sourceCode/disk/models/: Pointer.cpp  Pointer.h
sourceCode/disk/network/: JsonWriter.cpp  JsonWriter.h  TCPServer.cpp  TCPServer.h
sourceCode/disk/proofs/: BlockManagerProof.cpp  BlockManagerProof.h  FileManagerProof.cpp
sourceCode/handlers/: FileHandler.cpp  FileHandler.h
sourceCode/mains/: harfs-controller-main.cpp  harfs-disk-main.cpp
sourceCode/managers/: BlockManager.cpp  BlockManager.h  FileManager.cpp  FileManager.h  NetworkUtils.cpp  NetworkUtils.h
sourceCode/models/: BlockManager.cpp  BlockManager.h  Pointer.cpp  Pointer.h  RegisterManager.cpp  RegisterManager.h
sourceCode/proofs/: FileManagerProof.cpp  FileManagerProof.h
src/dataStructures/: BinaryTree.h
src/handlers/: FileHandler.cpp  FileHandler.h
src/models/: FileManager.cpp  FileManager.h
